# Smart.DevScripts

./: LICENSE  README.md
appcodepack/: appcode-upgrade.php  appcodepack-java-gclosure-yui.ini  appcodepack-java-gclosure.ini  appcodepack-java-yui.ini  appcodepack-nodejs-uglify.ini  appcodepack.php  appcodeunpack.ini  appcodeunpack.php
appcodepack/node-modules/uglifycss/: package.json  uglifycss-lib.js
docs/misc/: Query-pgsql-json.sql  acmev2-howto.txt  cython-sample.txt  git-howto.txt  git-with-apache.txt  glusterfs-howto.txt  go-cgo-flags.txt  image-optimize.txt  ipmi-howto.txt  nodejs-npm-howto.txt  normalize-files-utf8-no-bom.txt  opensmtpd-sqlite-howto.txt  php5-fpm.conf  subversion-howto.txt  uxm-ca-howto.txt
docs/netbsd/: cloudserver-development.txt  netbsd-boot-cfg.html  nfs-howto-netbsd.txt  terminalserver-development.txt  terminalserver-extra.txt
docs/openbsd/: 7zip.txt  OpenBSD__OpenSMTPD-Dovecot-MySQL-SPAMD__cagedmonster.html  acpi-disable.txt  benchmarks.txt  doas.txt  encfs-howto.txt  firmware.txt  headless-vnc.txt  mariadb-init.txt  mount-iso.txt  networking.txt  nfs-shares.txt  openbsd-60.html  openbsd-61.html  openbsd-62.html  openbsd-kernel-config.txt  pf-faq.txt  pfctl-firewall.txt  ports-build-list-and-hints-uxm.txt  ports-build-uxm.sh  ports-manage.txt  ports-pack.sh  ports-regenerate-icon-cache.sh  postgresql-init.txt  qemu-howto.txt  routing.txt  sysctl-tunning.txt  tmux.txt  vmm_howto.md
docs/openbsd/etc-build/: doas.conf  (+1 more)
electron/hello-world/: index.html  main.js  package.json  preload.js
electron/remote-url/: main.js  package.json
geanny-themes/: unixman.conf
gjs/: hello-world.gjs
go-lang/no-vnc/: main.go
go-lang/task-engine/: task-engine.go  task-engine.ini
java/: ButtonDemo.md  ButtonDemo.mf  HtmlDemo.java  SQlite.java
python/tk/: tk-test.py
shell-scripts/openmpi/: mpi-test.c  mpi-test.py  mpi-test.sh  mpi-test1.py  mpi-test2.py  mpi-test3.py  mpi-test4.py  mpi-test4c.py
shell-scripts/test.2038/: 2038-unixw.php  2038-unixw.pl  2038-unixw.py  2038.c
shell-scripts/wifi/: wifi-sample.sh
smart-framework-ext-modules/mod-agile/: dbmodel-editor.php  dbmodel-save.php  dbmodel.php  flowchart-editor.php  flowchart-save.php  flowchart.php
smart-framework-ext-modules/mod-cart/: test.php  test2.php
smart-framework-ext-modules/mod-cloud/: abook.php  files.php  ical.php  welcome.php
smart-framework-ext-modules/mod-cloud.etc/: config-index.php  init.php
smart-framework-ext-modules/mod-kml/: test.php
smart-framework-ext-modules/mod-maps-cache/: mapnik-proxy.php
tk-unix/august/: august  install.txt  keyname.tcl  readme.txt  specchars.txt
tk-unix/clamtk/: clamtk
tk-unix/tkdiff/: tkdiff.sh  tkdiff41.tcl
tk-unix/tkffmpeg/: AUTHORS  README  Release.txt  default.ini  tkffmpeg.desktop  tkffmpeg.sh  tkffmpeg.tcl  tray.tcl
tk-unix/tkrdp/: rdp-gui.pl
tk-unix/tkregexp/: visual_regexp
tk-unix/tqemu/: tqemu
tk-unix/vptk/: MANIFEST  README  RELEASE_NOTES.txt  vptk.pl  vptk_presentation.pod  vptk_w.pl  wizard_vptk_w.pl
tk-unix/vtcl/: notes-vtcl.txt  vtcl.sh
vala/test-uxm/gtksourceview/: meson.build  sample-editor.vala
vala/test-uxm/hello-world/: hello-world.vala  hello-world2.vala  hello-world3.vala  meson.build
vala/test-uxm/tcp-socket-client/: meson.build  tcp-client-async.vala  tcp-client-sync.vala
vala/test-uxm/webkit/: meson.build  webkit-sample.vala  webkit-sample2.vala
vala/valadoc-mirror/: valadoc-mirror.sh
(+507 files in other folders)
